--- a/alice/casa/alice6.html
+++ b/alice/casa/alice6.html
@@ -17,7 +17,7 @@
         <div>
             <div class="historia">
                 <p>
-                É a casa do lenhador, aparentemente ele já está em casa
+                É a casa do lenhador, aparentemente tem alguém em casa
                 </p>
             
             </div>
@@ -38,8 +38,9 @@
             </div>
         </div>
         <div id=botoes>
-            <a href="../../index.html"><button class="botoes">Sair</button></a>
             <button onclick="casa()" class="botoes">Responder</button>
+            <a href="../../index.html"><button class="botoes">Sair</button></a>
+            
         </div>
 
     </div>
