--- a/alice/floresta/alice1.html
+++ b/alice/floresta/alice1.html
@@ -41,8 +41,8 @@
             </div>
         </div>
         <div id=botoes>
+            <button onclick="casa()" class="botoes">Responder</button>
             <a href="../../index.html"><button class="botoes">Sair</button></a>
-            <button onclick="floresta()" class="botoes">Responder</button>
         </div>
 
     </div>
