--- a/alice/floresta/alice4.html
+++ b/alice/floresta/alice4.html
@@ -40,8 +40,8 @@
             </div>
         </div>
         <div id=botoes>
+            <button onclick="casa()" class="botoes">Responder</button>
             <a href="../../index.html"><button class="botoes">Sair</button></a>
-            <button onclick="floresta3()" class="botoes">Responder</button>
         </div>
 
     </div>
