--- a/index.html
+++ b/index.html
@@ -9,55 +9,47 @@
     <title>Projeto Final</title>
 </head>
 <body>
-    <!--MENU MERAMENTE ILUSTRATIVO --> 
-    <header>
-        <input type="checkbox" id="check">
-        <label id="icone" for="check"><img src="icone-menu.jpg" alt="icone menu" width=50px" height="50px"></label>
-        <div id="barra">
-        <nav>
-            <a href="" class="link">Home</a>
-            <a href="" class="link">Contato</a>
-            <a href="" class="link">Exemplo1</a>
-            <a href="" class="link">Exemplo2</a>
-        </nav>
-        </div>
-    </header>
-
     <h1 id="nome">Brazilian Horror Game</h1>
 
     <div id="box">
         <h2>Escolha seu personagem</h2>
         <div id="personagens">
-            <div class="personagem">
-                <a href="alice/floresta/alice1.html"><button class="nome">Alice</button></a>
+            <a href="alice/floresta/alice1.html" class="inicio"><div class="personagem">
+                <button class="nome">Alice</button>
                 <br>
                 <img src="alice.jpeg" alt="Alice" class="imagens">
+                <br>
                 <span class="level">Level Hard</span>
+                <br>
                 <p>
                 Alice é uma jovem que está indo visitar a avó na cidade vizinha. Para surpreender a vovó e chegar mais cedo, resolve então pegar um atalho e cortar o caminho pela floresta.
                 </p>
             
-            </div>
-            <div class="personagem">
-                <a href="lenhador/floresta/lenhador1.html"><button class="nome">Geralt</button></a>
+            </div></a>
+            <a href="lenhador/floresta/lenhador1.html" class="inicio"><div class="personagem">
+                <button class="nome">Geralt</button>
                 <br>
                 <img src="lenhador.jpeg" alt="lenhador" class="imagens">
+                <br>
                 <span class="level">Level Medium</span>
+                <br>
                 <p>
                 Geralt é um lenhador que trabalha e mora na floresta. Está apenas em mais um dia de trabalho comum... ou pelo menos é o que ele esperava.
                 </p>
-            </div>
-            <div class="personagem">
-                <a href="monstro/floresta/monstro1.html"><button class="nome">Chupacabra</button></a>
+            </div></a>
+            <a href="monstro/floresta/monstro1.html" class="inicio"><div class="personagem">
+                <button class="nome">Chupacabra</button>
                 <br>
                 <img src="chupacabra.png" alt="chupacabra" class="imagens">
+                <br>
                 <span class="level">Level Easy</span>
+                <br>
                 <p>
                 O Chupacabra é uma criatura que vive na floresta e sai para caçar e se alimentar em algumas épocas do ano.
                 <br>
                 Spoiler: é época de se alimentar.
                 </p>
-            </div>
+            </div></a>
         </div>
 
     </div>
