--- a/monstro/celeiro/monstro7.html
+++ b/monstro/celeiro/monstro7.html
@@ -35,8 +35,8 @@
             </div>
         </div>
         <div id=botoes>
+            <button onclick="casa()" class="botoes">Responder</button>
             <a href="../../index.html"><button class="botoes">Sair</button></a>
-            <button onclick="celeiro()" class="botoes">Responder</button>
         </div>
 
     </div>
