--- a/lenhador/celeiro/lenhador7.html
+++ b/lenhador/celeiro/lenhador7.html
@@ -37,8 +37,8 @@
             </div>
         </div>
         <div id=botoes>
+            <button onclick="casa()" class="botoes">Responder</button>
             <a href="../../index.html"><button class="botoes">Sair</button></a>
-            <button onclick="celeiro2()" class="botoes">Responder</button>
         </div>
 
     </div>
