corrigindo o caminho das function nas pags

--- a/alice/floresta/alice1.html
+++ b/alice/floresta/alice1.html
@@ -41,7 +41,7 @@
             </div>
         </div>
         <div id=botoes>
-            <button onclick="casa()" class="botoes">Responder</button>
+            <button onclick="floresta()" class="botoes">Responder</button>
             <a href="../../index.html"><button class="botoes">Sair</button></a>
         </div>
 
