--- a/monstro/floresta/monstro3.html
+++ b/monstro/floresta/monstro3.html
@@ -35,7 +35,7 @@
             </div>
         </div>
         <div id=botoes>
-            <button onclick="casa()" class="botoes">Responder</button>
+            <button onclick="floresta2()" class="botoes">Responder</button>
             <a href="../../index.html"><button class="botoes">Sair</button></a>
         </div>
 
