primeira tentativa de responsividade

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div id="box">
         <h2>Escolha seu personagem</h2>
         <div id="personagens">
-            <a href="alice/floresta/alice1.html" class="inicio"><div class="personagem">
+            <a href="alice/floresta/alice1.html" class="inicio"><div class="personagem alice">
                 <button class="nome">Alice</button>
                 <br>
                 <img src="alice.jpeg" alt="Alice" class="imagens">
@@ -26,7 +26,7 @@
                 </p>
             
             </div></a>
-            <a href="lenhador/floresta/lenhador1.html" class="inicio"><div class="personagem">
+            <a href="lenhador/floresta/lenhador1.html" class="inicio"><div class="personagem lenhador">
                 <button class="nome">Geralt</button>
                 <br>
                 <img src="lenhador.jpeg" alt="lenhador" class="imagens">
@@ -37,7 +37,7 @@
                 Geralt é um lenhador que trabalha e mora na floresta. Está apenas em mais um dia de trabalho comum... ou pelo menos é o que ele esperava.
                 </p>
             </div></a>
-            <a href="monstro/floresta/monstro1.html" class="inicio"><div class="personagem">
+            <a href="monstro/floresta/monstro1.html" class="inicio"><div class="personagem monstro">
                 <button class="nome">Chupacabra</button>
                 <br>
                 <img src="chupacabra.png" alt="chupacabra" class="imagens">
